--- a/specs.html
+++ b/specs.html
@@ -97,7 +97,8 @@
         <div class="specs-grid">
             <div class="specs-item">
                 <h2>Informações</h2>
-                <p><strong>Criadores:</strong> Ryquelme e Jorge</p>
+                <p><strong>Criador:</strong> Ryquelme</p>
+                <p><strong>Criador:</strong> Jorge</p>
                 <p><strong>Versão:</strong> 1.0</p>
                 <p><strong>Tamanho:</strong> 14.23 MB</p>
                 <p><strong>Contato:</strong> 91 98474-4448</p>
