--- a/unindex.html
+++ b/unindex.html
@@ -128,7 +128,8 @@
             <div class="specs-item">
                 <h2>Informações Básicas</h2>
                 <ul class="tech-list">
-                    <li><strong>Criadores:</strong> Ryquelme e Jorge</li>
+                    <li><strong>Criador:</strong> Ryquelme</li>
+                    <li><strong>Criador:</strong> Jorge</li>
                     <li><strong>Versão:</strong> 1.0</li>
                     <li><strong>Tamanho:</strong> 14.23 MB</li>
                     <li><strong>Data de Lançamento:</strong> 15/06/2023</li>
