--- a/unindex.html
+++ b/unindex.html
@@ -132,7 +132,7 @@
                     <li><strong>Criador:</strong> Jorge</li>
                     <li><strong>Versão:</strong> 1.0</li>
                     <li><strong>Tamanho:</strong> 14.23 MB</li>
-                    <li><strong>Data de Lançamento:</strong> 15/06/2023</li>
+                    <li><strong>Data de Lançamento:</strong> ***/***/***</li>
                     <li><strong>Contato:</strong> 91 98474-4448</li>
                     <li><strong>Email:</strong> contato@spacegame.com</li>
                 </ul>
@@ -143,13 +143,13 @@
                 <div class="specs-images">
                     <!-- Primeira imagem SEM link -->
                     <img src="fundadorj-space-game.png" alt="Gameplay Space Game">
-                    <p class="image-caption">Cena de batalha espacial</p>
+                    <p class="image-caption">Programador fera!</p>
                     
                     <!-- Segunda imagem COM link para o Instagram -->
                     <a href="https://www.instagram.com/ryquelme959/" target="_blank" rel="noopener noreferrer">
                         <img src="fundadors-space-game.png" alt="Interface do jogo">
                     </a>
-                    <p class="image-caption">Menu principal - Clique para ver no Instagram</p>
+                    <p class="image-caption">Menu principal - Clique na imagen para ver no Instagram</p>
                 </div>
             </div>
         </div>
@@ -159,21 +159,21 @@
                 <h2>Tecnologias Utilizadas</h2>
                 <ul class="tech-list">
                     <li><strong>Motor Gráfico:</strong> Unity 2022.3</li>
-                    <li><strong>Linguagem:</strong> C#</li>
+                    <li><strong>Linguagem:</strong> HTML, JS e CSS</li>
                     <li><strong>Plataforma:</strong> Windows, Android</li>
                     <li><strong>Resolução:</strong> 1920x1080 (Full HD)</li>
-                    <li><strong>FPS:</strong> 60 quadros/segundo</li>
+                    <li><strong>FPS:</strong> 70 quadros/segundo</li>
                 </ul>
             </div>
 
             <div class="specs-item">
                 <h2>Requisitos do Sistema</h2>
                 <ul class="tech-list">
-                    <li><strong>Sistema Operacional:</strong> Windows 10+</li>
-                    <li><strong>Processador:</strong> Intel i5 ou equivalente</li>
-                    <li><strong>Memória RAM:</strong> 4GB mínimo</li>
+                    <li><strong>Sistema Operacional:</strong> Windows 8/10+</li>
+                    <li><strong>Processador:</strong> Intel i3 ou equivalente</li>
+                    <li><strong>Memória RAM:</strong> 2GB mínimo</li>
                     <li><strong>Placa de Vídeo:</strong> 2GB VRAM</li>
-                    <li><strong>Armazenamento:</strong> 50MB livres</li>
+                    <li><strong>Armazenamento:</strong> 25MB livres</li>
                 </ul>
             </div>
         </div>
@@ -183,17 +183,18 @@
             <ul class="features-list">
                 <li>Sistema de combate espacial com física realista</li>
                 <li>5 naves diferentes com habilidades únicas</li>
-                <li>15 níveis progressivos com desafios variados</li>
-                <li>Sistema de upgrade para naves e armas</li>
-                <li>Multiplayer local para até 2 jogadores</li>
-                <li>Trilha sonora original e efeitos sonoros imersivos</li>
+                <li>6 níveis iniciais progressivos com desafios variados</li>
+                <li>Sistema de upgrade para novas modalidades</li>
+                <li>Multiplayer local para até 2 jogadores/ em progresso</li>
+                <li>Trilha sonora original e efeitos sonoros imersivos/sim</li>
                 <li>Suporte a controles e teclado/mouse</li>
             </ul>
         </div>
 
         <div style="text-align: center; margin-top: 40px;">
             <a href="index.html" class="game-link">Voltar para Avaliação</a>
-            <a href="download.html" class="game-link" style="margin-left: 15px;">Download do Jogo</a>
+            <a href="download.html" class="game-link" style="margin-left: 15px;">Download do Jogo/not</a>
+             <li><strong>dowload em dreve!:</strong> aguarde!</li>
         </div>
     </div>
 </body>
